# SimpleWebsocket

./: CMakeLists.txt  README.md
extra/: websock_serv_all.hpp
source/include/: websock_frame.h  websock_serv.hpp
source/include/util/: base64.hpp  hex_view.hpp  sha1.hpp  util.hpp
source/src/: websock_frame.cpp  websock_serv.cpp
source/tests/: serv_test.cpp
